# data-testing-platform

./: .gitignore  DATA_TESTING_PLATFORM_PROPOSAL.md  README.md  pyproject.toml  requirements.txt
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  USER_GUIDE.md
examples/: anomaly_detection.yaml  anomaly_transactions.csv  api_contract.yaml  customer_quality.yaml  customers.csv  data_quality.yaml  etl_test.yaml  mock_api.py  order_schema.json
examples/industries/: README.md
examples/industries/finance/: account_balances.csv  etl_reconciliation.yaml  mock_finance_api.py  transaction_data.csv  transaction_quality.yaml
examples/industries/healthcare/: api_contract.yaml  mock_healthcare_api.py  patient_data.csv  patient_quality.yaml  patient_schema.json
examples/industries/retail/: etl_sales.yaml  mock_retail_api.py  product_catalog.csv  product_quality.yaml  sales_orders.csv
src/data_test_tool/: __init__.py  cli.py
src/data_test_tool/ai/: __init__.py  anomaly_detector.py  generator.py  ml_anomaly_detector.py  nlp.py  profile.py
src/data_test_tool/connectors/: __init__.py  api.py  base.py  database.py  file.py
src/data_test_tool/engine/: __init__.py  etl_validators.py  evaluator.py  runner.py
src/data_test_tool/models/: __init__.py  test_definition.py
src/data_test_tool/reporting/: __init__.py  html_report.py  json_report.py  junit_report.py
tests/: test_ai_generator.py  test_etl_runner.py  test_runner.py
